# regime-monitor

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml  regime-monitor.command
.github/workflows/: dashboard.yml
data/: signal_history.csv
deploy/: README.md  com.regimemonitor.digest.plist  run_digest.sh
notebooks/: performance_analysis.ipynb
regime/: __init__.py  backtest.py  cli.py  config.py  dashboard.py  data.py  features.py  jump_model.py  notify.py  pipeline.py  recommend.py  report.py  tune.py
scripts/: _probe_frag_series.py  _probe_fragility.py  eval_credit_signals.py  eval_features.py  eval_short_signal.py  run_walkforward.py  sweep_lambda.py
