[project]
name = "regime-monitor"
version = "0.1.0"
description = "Personal market-regime monitor: tells you Bull/Bear regime + a plain-English allocation suggestion for your 401k and trading accounts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10.0",
    "pyarrow>=14.0.0",
    "matplotlib>=3.7.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
regime = "regime.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "jupyter>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["regime"]
